refactor: changed footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,14 +63,12 @@ body {
     display: flex;
     justify-content: center;
     padding: 35px;
-    gap: 218px;
   }
   
-  footer a {
-    text-decoration: none;
+footer p {
+  margin: 0;
     color: #000;
     font-size: 18px;
-    line-height: 23.4px;
   }
   
   //-----------------------------
