fix: added top padding

--- a/src/App.scss
+++ b/src/App.scss
@@ -155,6 +155,10 @@ $line-heights: (
   flex-direction: column;
 }
 
+.education {
+  padding-top: 30px;
+}
+
 .education-text {
   text-align: center;
 }
