--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
 }
@@ -17,7 +17,7 @@ header {
   justify-content: space-between;
   align-items: center;
   // padding: 50px;
-  height: 173px;
+  height: 100px;
   background-color: cadetblue;
   position: fixed;
   top: 0;
@@ -26,7 +26,6 @@ header {
 }
 
 .content-title {
-  padding-left: 208px;
   text-align: center;
 }
 
@@ -72,13 +71,6 @@ footer p {
 //---
 //CARDS
 //---
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 50px;
-  gap: 15px;
-}
-
 .card-image {
   height: 356px;
 }
@@ -95,6 +87,7 @@ footer p {
   max-width: 509px;
   max-height: 356px;
   position: relative;
+  cursor: pointer;
 }
 
 .white-card-wrapper {
@@ -122,6 +115,88 @@ footer p {
   visibility: visible;
   opacity: 1;
 }
+
+//---
+//Main
+//---
+//---
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 42px;
+  padding-top: 15px;
+  gap: 15px;
+}
+
+.main-container-text {
+  height: 542px;
+  width: 771px;
+}
+
+.main-container-info {
+  height: 348px;
+  width: 508px;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.main-container-info p {
+  margin: 0;
+}
+
+.main-container-setting {
+  height: 199px;
+  width: 517px;
+  font-size: 13px;
+  line-height: 22px;
+  position: relative;
+}
+
+.main-container-setting p {
+  margin: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+//---
+//CATALOG
+//---
+
+$image-height: 356px;
+$image-height2: 727px;
+
+.image_4 {
+  height: 542px;
+  width: 1033px;
+}
+
+.image_5 {
+  height: $image-height2;
+  width: 1032px;
+}
+
+.image_6 {
+  height: $image-height2;
+  width: 771px;
+}
+
+.image_7 {
+  height: $image-height;
+  width: 1819px;
+}
+
+.image_8 {
+  height: $image-height;
+  width: 1031px;
+}
+
+.image_9 {
+  height: $image-height;
+  width: 771px;
+}
+
 //---
 //Education & contacts
 //---
@@ -184,4 +259,57 @@ $line-heights: (
 .contacts-text a {
   color: #000;
   text-decoration: none;
+}
+
+//---
+//Heretics
+//---
+
+.heretics {
+  color: #ffffff;
+  background-color: #000;
+}
+
+.container-6-789 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.container-789 {
+  height: 171px;
+  width: 771px;
+  display: flex;
+  gap: 15px;
+}
+
+.container-11-12 {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.image_4-heretics {
+  height: 542px;
+  width: 1033px;
+}
+
+.image_5-heretics {
+  height: 727px;
+  width: 1033px;
+}
+
+.image_6-heretics {
+  height: 542px;
+  width: 771px;
+}
+
+.image_7_8_9_11_12-heretics {
+  height: 171px;
+  width: 248px;
+}
+
+.image_10_13-heretics {
+  height: 542px;
+  width: 770px;
 }
