feat: added dinosaurs

--- a/src/App.scss
+++ b/src/App.scss
@@ -313,3 +313,48 @@ $line-heights: (
   height: 542px;
   width: 770px;
 }
+
+//---
+//Dino
+//---
+.dino-setings {
+  height: 193px;
+}
+.image_4_5_8_9-dino {
+  height: 356px;
+  width: 509px;
+}
+.container-4_5_dino {
+  display: flex;
+  gap: 15px;
+  height: 356px;
+  width: 1032px;
+}
+.container-45_7_dino {
+  flex-direction: column;
+  display: flex;
+  gap: 15px;
+  height: 1098px;
+  width: 1032px;
+}
+.image_6-dino {
+  height: 542px;
+  width: 771px;
+  padding-top: 15px;
+}
+.image_7-dino {
+  height: 727px;
+  width: 1032px;
+}
+.image_10-dino {
+  width: 771px;
+  height: 356px;
+}
+.image_11_13-dino {
+  height: 542px;
+  width: 772px;
+}
+.image_12-dino {
+  height: 542px;
+  width: 245px;
+}
