feat: added knockout

--- a/src/App.scss
+++ b/src/App.scss
@@ -392,3 +392,23 @@ $line-heights: (
   height: 727px;
   width: 247px;
 }
+
+//---
+//Knockout
+//---
+.image_4-knockout {
+  height: 542px;
+  width: 1033px;
+}
+.image_5_7-knockout {
+  height: 542px;
+  width: 509px;
+}
+.image_6-knockout {
+  height: 542px;
+  width: 771px;
+}
+.image_8-knockout {
+  height: 910px;
+  width: 1819px;
+}
