--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,91 @@ body {
   background-color: #000;
 }
 
+@media screen and (max-width: 10240px) {
+  $padding: 4123.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 7680px) {
+  $padding: 2858.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 5120px) {
+  $padding: 1591.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 3840px) {
+  $padding: 951.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 3414px) {
+  $padding: 738px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 3200px) {
+  $padding: 631.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 2845px) {
+  $padding: 453.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 2560px) {
+  $padding: 320px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 2328px) {
+  $padding: 195px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 2048px) {
+  $padding: 55.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 2048px) {
+  $padding: 55.5px;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+@media screen and (max-width: 1920px) {
+  $padding: 0;
+  .adaptive {
+    padding-left: $padding;
+    padding-right: $padding;
+  }
+}
+
 //---
 //Header
 //---
