--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@ body {
   background-color: #000;
 }
 
+.hidden {
+  display: none;
+}
+
 @media screen and (max-width: 10240px) {
   $padding: 4123.5px;
   .adaptive {
@@ -258,33 +262,33 @@ $image-height: 356px;
 $image-height2: 727px;
 
 .image_4 {
-  height: 542px;
-  width: 1033px;
+  height: 542px !important;
+  width: 1033px !important;
 }
 
 .image_5 {
-  height: $image-height2;
-  width: 1032px;
+  height: $image-height2 !important;
+  width: 1032px !important;
 }
 
 .image_6 {
-  height: $image-height2;
-  width: 771px;
+  height: $image-height2 !important;
+  width: 771px !important;
 }
 
 .image_7 {
-  height: $image-height;
-  width: 1819px;
+  height: $image-height !important;
+  width: 1819px !important;
 }
 
 .image_8 {
-  height: $image-height;
-  width: 1031px;
+  height: $image-height !important;
+  width: 1031px !important;
 }
 
 .image_9 {
-  height: $image-height;
-  width: 771px;
+  height: $image-height !important;
+  width: 771px !important;
 }
 
 //---
